# agencia_viagens_ia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  list_models.py  pyproject.toml  render.yaml  requirements.txt  test_fallback.py  test_out.txt  test_output.txt  walkthrough.md
.github/workflows/: ci.yml
.venv_corrupt_202603312250/Scripts/: dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
src/: agents.py  config.py  crew_builder.py  tasks.py
src/models/: location.py
src/services/: cache_service.py  finance_service.py  geocoding_service.py
src/utils/: logger.py
tests/: conftest.py  test_config.py  test_crew_builder.py  test_finance_service.py  test_geocoding_service.py  test_logger_integration.py
